force-app/main/default/objects/Client_Setup_Sheet__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline Management</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Continuity</fullName>
            </value>
            <value>
                <fullName>Pipeline Management &amp; Social Media</fullName>
            </value>
            <value>
                <fullName>Blog Package</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Graphic Video</fullName>
            </value>
            <value>
                <fullName>Sell Sheets</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Virtual Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Inbound Pipeline</fullName>
            </value>
            <value>
                <fullName>Creative Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>