force-app/main/default/objects/Client_Setup_Sheet__c/fields/Program_Overview__c.field-meta.xml
<CustomField>
    <fullName>Program_Overview__c</fullName>
    <inlineHelpText>Give a complete description of what was sold to the client, what Abstrakt is required to fulfill, and any additional information that will help during the process.</inlineHelpText>
    <label>Program Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>