force-app/main/default/objects/Client_Setup_Sheet__c/fields/PSM_AM__c.field-meta.xml
<CustomField>
    <fullName>PSM_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSM/AM</label>
    <type>Checkbox</type>
</CustomField>