force-app/main/default/objects/Client_Setup_Sheet__c/fields/Reason_for_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Escalation__c</fullName>
    <description>Sales rep needs to provide an explanation when the status is moved to Escalated - Pending.</description>
    <label>Reason for Escalation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>