force-app/main/default/objects/Client_Setup_Sheet__c/fields/Reason_for_Half_Program__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Half_Program__c</fullName>
    <label>Reason for Half Program</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>