force-app/main/default/objects/Client_Setup_Sheet__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <inlineHelpText>Client or Individual that referred the account</inlineHelpText>
    <label>Referred By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>