force-app/main/default/objects/Client_Setup_Sheet__c/fields/Referred_By_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Setup Sheets</relationshipLabel>
    <relationshipName>Client_Setup_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>