force-app/main/default/objects/Client_Setup_Sheet__c/fields/Referred_By_Employee__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By (Employee)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets4</relationshipName>
    <type>Lookup</type>
</CustomField>