force-app/main/default/objects/Client_Setup_Sheet__c/fields/Reoccuring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reoccuring_Amount__c</fullName>
    <label>Reoccuring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>