force-app/main/default/objects/Client_Setup_Sheet__c/fields/Requirement_Sheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Sheet_URL__c</fullName>
    <description>link to the Requirement Sheet (record type of &quot;Other - Appt Guarantee&quot;) tied to the Opportunity. Updated through CSS flow</description>
    <inlineHelpText>Link to Other Appt Guarantee details.</inlineHelpText>
    <label>Requirement Sheet URL</label>
    <type>Url</type>
</CustomField>