force-app/main/default/objects/Client_Setup_Sheet__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <formula>Company_Name__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Opportunity Amount field</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>