force-app/main/default/objects/Client_Setup_Sheet__c/fields/Sales_Director_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spiff Sheet Approved</label>
    <type>Checkbox</type>
</CustomField>