force-app/main/default/objects/Client_Setup_Sheet__c/fields/Sales_Summary_for_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Summary_for_Implementation__c</fullName>
    <inlineHelpText>Information that should be relayed to the implementation team summarizing the sales journey for this client. This can be professional info, personable info, or the client&apos;s overall goals. ESR may also ask that the IPM reaches out to them for a quick call</inlineHelpText>
    <label>Sales Summary for Implementation</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>