force-app/main/default/objects/Client_Setup_Sheet__c/fields/Sapper_Consulting_Client_Setup_Survey__c.field-meta.xml
<CustomField>
    <fullName>Sapper_Consulting_Client_Setup_Survey__c</fullName>
    <description>Used to set up client setup sheets via Alchemer for Sapper Consulting&apos;s closed opportunities.</description>
    <label>Sapper Consulting Client Setup Survey</label>
    <type>Url</type>
</CustomField>