force-app/main/default/objects/Client_Setup_Sheet__c/fields/Sapper_Setup_Survey__c.field-meta.xml
<CustomField>
    <fullName>Sapper_Setup_Survey__c</fullName>
    <formula>&quot;https://survey.alchemer.com/s3/6908322/Sapper-Client-Setup-Sheet2&amp;cssId=&quot;+ Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sapper Setup Survey</label>
    <type>Text</type>
</CustomField>