force-app/main/default/objects/Client_Setup_Sheet__c/fields/Scanned_to_File__c.field-meta.xml
<CustomField>
    <fullName>Scanned_to_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scanned to File</label>
    <type>Checkbox</type>
</CustomField>