force-app/main/default/objects/Client_Setup_Sheet__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to send Implementation Welcome Email</description>
    <inlineHelpText>Sends Implementation Welcome Email</inlineHelpText>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>