force-app/main/default/objects/Client_Setup_Sheet__c/fields/Social_Media_Maanger__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Maanger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Media Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>