force-app/main/default/objects/Client_Setup_Sheet__c/fields/Social_Media_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Manager_Notes__c</fullName>
    <label>Social Media Manager Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>