force-app/main/default/objects/Client_Setup_Sheet__c/fields/Special_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Special_Approval_Required__c</fullName>
    <description>If checked it creates a case for the sales rep and VP of Sales requesting documentation sent to Director of Implementation.</description>
    <label>Special Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>