force-app/main/default/objects/Client_Setup_Sheet__c/fields/Special_Invoice_Wording__c.field-meta.xml
<CustomField>
    <fullName>Special_Invoice_Wording__c</fullName>
    <label>Special Invoice Wording</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>