force-app/main/default/objects/Client_Setup_Sheet__c/fields/Spiff_Sheet_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Sheet_Approved_Date__c</fullName>
    <description>Populates date when Spiff Sheet Approved checkbox is marked.</description>
    <label>Spiff Sheet Approved Date</label>
    <type>Date</type>
</CustomField>