force-app/main/default/objects/Client_Setup_Sheet__c/fields/Sr_IPM_Has_Called__c.field-meta.xml
<CustomField>
    <fullName>Sr_IPM_Has_Called__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sr. IPM Has Called?</label>
    <type>Checkbox</type>
</CustomField>