force-app/main/default/objects/Client_Setup_Sheet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pushed</fullName>
            </value>
            <value>
                <fullName>Rescind</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Escalated - Offboarding</fullName>
            </value>
            <value>
                <fullName>Escalated - Pending</fullName>
            </value>
            <value>
                <fullName>Escalated - offboarded</fullName>
                <isActive>false</isActive>
                <label>Escalated - offboarded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>