force-app/main/default/objects/Client_Setup_Sheet__c/fields/Subsequent_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Billing_Amount__c</fullName>
    <label>Subsequent Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>