force-app/main/default/objects/Client_Setup_Sheet__c/fields/Subsequent_Billing_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Billing_Month_Year__c</fullName>
    <label>Subsequent Billing Month/Year</label>
    <type>Date</type>
</CustomField>