force-app/main/default/objects/Client_Setup_Sheet__c/fields/Territory_Program_will_be_run_in__c.field-meta.xml
<CustomField>
    <fullName>Territory_Program_will_be_run_in__c</fullName>
    <label>Territory Program will be run in</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>