force-app/main/default/objects/Client_Setup_Sheet__c/fields/Type_of_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Implementation__c</fullName>
    <label>Type of Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Implementation</fullName>
            </value>
            <value>
                <fullName>Partial Implementation</fullName>
            </value>
            <value>
                <fullName>No Implementation Required</fullName>
                <isActive>false</isActive>
                <label>No Implementation Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>