force-app/main/default/objects/Client_Setup_Sheet__c/fields/Update_Implementation_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Update_Implementation_Explanation__c</fullName>
    <inlineHelpText>Use this field to update the Implementation Explanation field to include your name/timestamp in front of your note.</inlineHelpText>
    <label>Update Implementation Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>