force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_are_their_goals_for_program__c.field-meta.xml
<CustomField>
    <fullName>What_are_their_goals_for_program__c</fullName>
    <label>What are their goals for program?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>