force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_Authorized_the_Approval__c.field-meta.xml
<CustomField>
    <fullName>What_Authorized_the_Approval__c</fullName>
    <label>What Authorized the Approval?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>