force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_does_the_prospect_sell__c.field-meta.xml
<CustomField>
    <fullName>What_does_the_prospect_sell__c</fullName>
    <inlineHelpText>What services/products are we prospecting for the client?</inlineHelpText>
    <label>What does the prospect sell?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>