force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_geography_are_we_targeting__c.field-meta.xml
<CustomField>
    <fullName>What_geography_are_we_targeting__c</fullName>
    <label>What geography are we targeting?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>