force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_industry_areas_are_we_targeting__c.field-meta.xml
<CustomField>
    <fullName>What_industry_areas_are_we_targeting__c</fullName>
    <inlineHelpText>What are their top industries to target? Or, What industries make up most of their current client base?</inlineHelpText>
    <label>What industry areas are we targeting?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>