force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_is_the_length_of_their_sales_cycle__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_length_of_their_sales_cycle__c</fullName>
    <label>What is the length of their sales cycle?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>