force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_is_the_sweet_spot__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_sweet_spot__c</fullName>
    <inlineHelpText>As far as targets, what is the client&apos;s sweet spot? (i.e. square footage, workstation count, employee count, etc.)</inlineHelpText>
    <label>What is the sweet spot?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>