force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_is_their_close_rate_on_cold_calls__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_close_rate_on_cold_calls__c</fullName>
    <label>What is their close rate on cold calls?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>