force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_makes_you_different__c.field-meta.xml
<CustomField>
    <fullName>What_makes_you_different__c</fullName>
    <inlineHelpText>What is the client&apos;s biggest differentiator?</inlineHelpText>
    <label>What makes you different?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>