force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_problem_are_we_solving__c.field-meta.xml
<CustomField>
    <fullName>What_problem_are_we_solving__c</fullName>
    <label>What problem are we solving?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>