force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_products_are_the_purchasing__c.field-meta.xml
<CustomField>
    <fullName>What_products_are_the_purchasing__c</fullName>
    <label>What products are the purchasing?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>