force-app/main/default/objects/Client_Setup_Sheet__c/fields/What_will_make_this_a_long_term_partner__c.field-meta.xml
<CustomField>
    <fullName>What_will_make_this_a_long_term_partner__c</fullName>
    <label>What will make this a long-term partner?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>