force-app/main/default/objects/Client_Setup_Sheet__c/fields/Why__c.field-meta.xml
<CustomField>
    <fullName>Why__c</fullName>
    <inlineHelpText>Why was this moved to Pushed, Rescind, or Canceled?</inlineHelpText>
    <label>Reasons Why Status Changed</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>