force-app/main/default/objects/Client_Setup_Sheet__c/fields/Why_Meet_With_This_Client__c.field-meta.xml
<CustomField>
    <fullName>Why_Meet_With_This_Client__c</fullName>
    <inlineHelpText>Why prospects would want to meet with this client?</inlineHelpText>
    <label>Why Meet With This Client?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>