force-app/main/default/objects/Client_Setup_Sheet__c/fields/Workato_Processed__c.field-meta.xml
<CustomField>
    <fullName>Workato_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workato Processed</label>
    <type>Checkbox</type>
</CustomField>