force-app/main/default/objects/Client_Setup_Sheet__c/fields/X5_Renewal_Increase__c.field-meta.xml
<CustomField>
    <fullName>X5_Renewal_Increase__c</fullName>
    <label>5% Renewal Increase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>