force-app/main/default/objects/Client_Setup_Sheet__c/recordTypes/Agency_Spiff_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Agency_Spiff_Sheet</fullName>
    <active>true</active>
    <label>Agency Spiff Sheet</label>
</RecordType>