force-app/main/default/objects/Client_Setup_Sheet__c/recordTypes/Auto_Direct.recordType-meta.xml
<RecordType>
    <fullName>Auto_Direct</fullName>
    <active>true</active>
    <label>Auto Direct</label>
</RecordType>