force-app/main/default/objects/Client_Setup_Sheet__c/recordTypes/Bionic_Expansion_Setup_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Bionic_Expansion_Setup_Sheet</fullName>
    <active>true</active>
    <label>Bionic Expansion Setup Sheet</label>
</RecordType>