force-app/main/default/objects/Client_Setup_Sheet__c/recordTypes/Combined_Program.recordType-meta.xml
<RecordType>
    <fullName>Combined_Program</fullName>
    <active>true</active>
    <label>Combined Program</label>
</RecordType>