force-app/main/default/objects/Client_Setup_Sheet__c/recordTypes/Pipeline_Sales_Spiff_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Pipeline_Sales_Spiff_Sheet</fullName>
    <active>true</active>
    <label>Pipeline Sales Spiff Sheet</label>
</RecordType>