force-app/main/default/objects/Client_Setup_Sheet__c/recordTypes/Sapper_CSS.recordType-meta.xml
<RecordType>
    <fullName>Sapper_CSS</fullName>
    <active>true</active>
    <label>Sapper CSS</label>
</RecordType>