force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Affiliated_with_Current_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Affiliated_with_Current_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
ISPICKVAL( Affiliated_with_a_Current_account__c , &quot;Yes&quot;) ,
ISBLANK(Affiliated_Account__c )
)</errorConditionFormula>
    <errorDisplayField>Affiliated_Account__c</errorDisplayField>
    <errorMessage>Please provide name of affiliated account.</errorMessage>
</ValidationRule>