force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Billing_Contact_Last_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_Last_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
ISPICKVAL( Status__c ,&apos;Completed&apos;),
Billing_Contact_Last_Name__c =null
)</errorConditionFormula>
    <errorDisplayField>Billing_Contact__c</errorDisplayField>
    <errorMessage>You must provide a first and last name for billing contact</errorMessage>
</ValidationRule>