force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Email_Marketing_Program_No_Early_Blast.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Marketing_Program_No_Early_Blast</fullName>
    <active>true</active>
    <description>You must fill out Early Email Blast Campaign if the client has opted into an Email Marketing Program</description>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
ISPICKVAL(Email_Marketing_Program__c, &apos;Opt-In&apos;),
ISBLANK(TEXT( Early_Email_Blast_Campaign__c))
)</errorConditionFormula>
    <errorMessage>You must fill out Early Email Blast Campaign if the client has opted into an Email Marketing Program</errorMessage>
</ValidationRule>