force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Email_Marketing_Program_Without_POCTitle.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Marketing_Program_Without_POCTitle</fullName>
    <active>true</active>
    <description>You must fill out Marketing POC Title if the client has opted into an Email Marketing Program</description>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
ISPICKVAL(Email_Marketing_Program__c, &apos;Opt-In&apos;),
ISBLANK(Email_Marketing_POC_Title__c)
)</errorConditionFormula>
    <errorMessage>You must fill out Marketing POC Title if the client has opted into an Email Marketing Program</errorMessage>
</ValidationRule>