force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/First_Right_of_Metro_Refusal.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Right_of_Metro_Refusal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
First_Right_of_Refusal__c = TRUE,
ISBLANK( First_Right_of_Refusal_Metro_Area_1__c ) )</errorConditionFormula>
    <errorDisplayField>First_Right_of_Refusal_Metro_Area_1__c</errorDisplayField>
    <errorMessage>Please select a metro</errorMessage>
</ValidationRule>