force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/High_Priority_Client_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Priority_Client_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
High_Priority_Client__c = TRUE,
ISBLANK( High_Priority_Client_Reasoning__c ))</errorConditionFormula>
    <errorDisplayField>High_Priority_Client_Reasoning__c</errorDisplayField>
    <errorMessage>Please explain why client is a high priority</errorMessage>
</ValidationRule>