force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Industry_Filled_Out_to_Mark_CSS_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Filled_Out_to_Mark_CSS_Complete</fullName>
    <active>true</active>
    <description>The user must fill out the industry field in order to mark the status completed</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Completed&quot;),
ISBLANK( TEXT(Industry__c )))</errorConditionFormula>
    <errorMessage>You must fill out the industry field in order to change status to complete.</errorMessage>
</ValidationRule>