force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Last_Day_to_Rescind_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Day_to_Rescind_Required</fullName>
    <active>true</active>
    <description>Update with date when &quot;Can Rescind during Implementation&quot; = Yes</description>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
ISPICKVAL( Can_Rescind_during_Implementation__c, &quot;Yes&quot;) ,
ISBLANK(Last_day_to_Rescind__c)
)</errorConditionFormula>
    <errorDisplayField>Last_day_to_Rescind__c</errorDisplayField>
    <errorMessage>&quot;Last Day to Rescind&quot; cannot be blank if &quot;Can Rescind during Implementation&quot; = Yes</errorMessage>
</ValidationRule>