force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Lock_the_setup_sheet_after_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_the_setup_sheet_after_approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Salesforce Admin&apos;,
$Profile.Name &lt;&gt; &apos;Executive Admin&apos;,
$Profile.Name &lt;&gt; &apos;Quality/Training Staff&apos;,
$Profile.Name &lt;&gt; &apos;Project Team Leader&apos;,
$Profile.Name &lt;&gt; &apos;Accounting Generalist&apos;,
$Profile.Name &lt;&gt; &apos;Project Owner - Implementations&apos;,
 $UserRole.Name &lt;&gt;&apos;Implementation Manager&apos;,
 $User.Id &lt;&gt;&apos;0054w00000A4jxO&apos;,
$User.Id &lt;&gt;&apos;0054A000009E95B&apos;,
$User.Id&lt;&gt;&apos;0054A000009EB78&apos;,
Sales_Director_Approved__c = TRUE,
NOT(ISCHANGED(IPM_Can_Welcome_Client__c)),
NOT(ISCHANGED(Kickoff_Meeting_Data__c)),
NOT(ISCHANGED(Implementation_Explanation__c)),
NOT(ISCHANGED(Update_Implementation_Explanation__c)),
NOT(ISCHANGED(Marketing_Manager__c))
)</errorConditionFormula>
    <errorMessage>Cannot Edit After Approval</errorMessage>
</ValidationRule>