force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Must_Fill_out_Discount_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Fill_out_Discount_Information</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Discount_Picklist__c , &quot;YES&quot;),
OR(
ISPICKVAL(Discount_Type__c,&quot;&quot;),
ISBLANK(Discount_Wording_from_Agreement__c ),
ISBLANK( Discount_Amount__c )
))</errorConditionFormula>
    <errorMessage>Must fill out all discount information</errorMessage>
</ValidationRule>