force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Must_Fill_Out_Other_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Fill_Out_Other_Information</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISPICKVAL(Department__c ,&quot;Staffing&quot;)),
 RecordTypeId =&apos;012G00000014QHc&apos;,
OR(ISPICKVAL( Industry__c ,&quot;Other&quot;),
ISPICKVAL( Industry__c ,&quot;Accounting&quot;),
ISPICKVAL( Industry__c ,&quot;Advertising&quot;),
ISPICKVAL( Industry__c ,&quot;Automotive&quot;),
ISPICKVAL( Industry__c ,&quot;Banks&quot;),
ISPICKVAL( Industry__c ,&quot;Clubs&quot;),
ISPICKVAL( Industry__c ,&quot;Commercial Recycling&quot;),
ISPICKVAL( Industry__c ,&quot;Consumer Brands&quot;),
ISPICKVAL( Industry__c ,&quot;Cosmetic Surgery&quot;),
ISPICKVAL( Industry__c ,&quot;Enterprise B2B&quot;),
ISPICKVAL( Industry__c ,&quot;Financial Recruiting&quot;),
ISPICKVAL( Industry__c ,&quot;Mobile Cleansing&quot;),
ISPICKVAL( Industry__c ,&quot;Outsourced HR&quot;),
ISPICKVAL( Industry__c ,&quot;Restaurants&quot;),
ISPICKVAL( Industry__c ,&quot;Uniforms&quot;)),
 OR(ISBLANK( What_does_the_prospect_sell__c ) ,
 ISBLANK( What_makes_you_different__c ) ,
 ISBLANK( How_much_does_your_serviceproduct_cost__c ) ,
 ISBLANK( What_is_the_sweet_spot__c ) ,
 ISBLANK( What_industry_areas_are_we_targeting__c ) ,
 ISBLANK( Is_the_list_in_Excel_with_phone_numbers__c ) ,
 ISBLANK( What_is_their_close_rate_on_cold_calls__c ) ,
 ISBLANK( Are_they_requesting_anything_special__c ) ,
 ISBLANK( Do_they_understand_what_they_are_buying__c ) ,
 ISBLANK( What_will_make_this_a_long_term_partner__c )))</errorConditionFormula>
    <errorMessage>Must Fill Out All Fields in the &quot;Other Client Information&quot; Section</errorMessage>
</ValidationRule>