force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Must_Give_Explanation_for_Half_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Give_Explanation_for_Half_Program</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
ISBLANK(TEXT(Explanation_for_Half_Program__c)),
RecordTypeId = &apos;012G00000014QHc&apos;,
ISPICKVAL(Program_Size__c, &quot;0.5&quot;)
)</errorConditionFormula>
    <errorDisplayField>Explanation_for_Half_Program__c</errorDisplayField>
    <errorMessage>Must Give Explanation for Half Program</errorMessage>
</ValidationRule>