force-app/main/default/objects/Client_Setup_Sheet__c/validationRules/Must_Give_Reason_for_Half_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Give_Reason_for_Half_Program</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; &apos;Sapper_CSS&apos;,
ISPICKVAL(Explanation_for_Half_Program__c,&quot;Other&quot;),
RecordTypeId = &quot;012G00000014QHc&quot;,
ISPICKVAL(Program_Size__c, &quot;0.5&quot;),
ISBLANK(Reason_for_Half_Program__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Half_Program__c</errorDisplayField>
    <errorMessage>Must Give Reason for Half Program if &quot;Other&quot; is selected</errorMessage>
</ValidationRule>